feat: magic link flow
