# pkg/api/v1/flows/magic/magic.go
@@ -1,33 +1,39 @@
 //SPDX-License-Identifier: Apache-2.0
 
-package google
+package magic
 
 import (
 	"database/sql"
 	"errors"
 
+	"github.com/AfterShip/email-verifier"
 	"github.com/gofiber/fiber/v2"
-	"github.com/loopholelabs/auth/pkg/api/v1/models"
-	"github.com/loopholelabs/auth/pkg/manager/flow"
 
 	"github.com/loopholelabs/logging/types"
 
+	"github.com/loopholelabs/auth/internal/mailer"
 	"github.com/loopholelabs/auth/internal/utils"
 	"github.com/loopholelabs/auth/pkg/api/options"
+	"github.com/loopholelabs/auth/pkg/api/v1/models"
+	"github.com/loopholelabs/auth/pkg/manager/flow"
+	"github.com/loopholelabs/auth/pkg/manager/flow/magic"
 )
 
-type Google struct {
+type Magic struct {
 	logger types.Logger
 	app    *fiber.App
+
+	emailVerifier *emailverifier.Verifier
 
 	options options.Options
 }
 
-func New(options options.Options, logger types.Logger) *Google {
-	a := &Google{
-		logger:  logger.SubLogger("GOOGLE"),
-		app:     utils.DefaultFiberApp(),
-		options: options,
+func New(options options.Options, logger types.Logger) *Magic {
+	a := &Magic{
+		logger:        logger.SubLogger("MAGIC"),
+		app:           utils.DefaultFiberApp(),
+		emailVerifier: emailverifier.NewVerifier(),
+		options:       options,
 	}
 
 	a.app.Get("/login", a.login)
@@ -36,29 +42,34 @@ func New(options options.Options, logger types.Logger) *Google {
 	return a
 }
 
-func (a *Google) App() *fiber.App {
+func (a *Magic) App() *fiber.App {
 	return a.app
 }
 
 // login godoc
-// @Summary      login logs in a user with Google
-// @Description  login logs in a user with Google
-// @Tags         google, login
+// @Summary      login logs in a user with a Magic Link
+// @Description  login logs in a user with a Magic Link
+// @Tags         magic, login
 // @Accept       json
 // @Produce      json
+// @Param        email        query string true  "Email Address"
 // @Param        next         query string true  "Next Redirect URL"
 // @Param        code         query string false "Device Flow Code"
 // @Success      307
-// @Header       307 {string} Location "Redirects to Google"
+// @Success      200 {string} string
 // @Failure      400 {string} string
 // @Failure      401 {string} string
 // @Failure      404 {string} string
 // @Failure      500 {string} string
-// @Router       /flows/google/login [get]
-func (a *Google) login(ctx *fiber.Ctx) error {
+// @Router       /flows/magic/login [get]
+func (a *Magic) login(ctx *fiber.Ctx) error {
 	a.logger.Debug().Str("IP", ctx.IP()).Msg("login")
-	if a.options.Manager.Google() == nil {
-		return ctx.Status(fiber.StatusUnauthorized).SendString("google provider is not enabled")
+	if a.options.Manager.Magic() == nil {
+		return ctx.Status(fiber.StatusUnauthorized).SendString("magic provider is not enabled")
+	}
+
+	if a.options.Manager.Mailer() == nil {
+		return ctx.Status(fiber.StatusUnauthorized).SendString("email provider is not enabled")
 	}
 
 	nextURL := ctx.Query("next")
@@ -66,7 +77,16 @@ func (a *Google) login(ctx *fiber.Ctx) error {
 		return ctx.Status(fiber.StatusBadRequest).SendString("next URL is required")
 	}
 
-	var err error
+	email := ctx.Query("email")
+	if email == "" {
+		return ctx.Status(fiber.StatusBadRequest).SendString("email is required")
+	}
+
+	ret, err := a.emailVerifier.Verify(email)
+	if err != nil || !ret.Syntax.Valid || !ret.HasMxRecords {
+		return ctx.Status(fiber.StatusBadRequest).SendString("invalid email address")
+	}
+
 	var deviceIdentifier string
 	code := ctx.Query("code")
 	if code != "" && len(code) == 8 {
@@ -83,22 +103,30 @@ func (a *Google) login(ctx *fiber.Ctx) error {
 		}
 	}
 
-	redirect, err := a.options.Manager.Google().CreateFlow(ctx.Context(), deviceIdentifier, "", nextURL)
+	token, err := a.options.Manager.Magic().CreateFlow(ctx.Context(), email, deviceIdentifier, "", nextURL)
 	if err != nil {
-		a.logger.Error().Err(err).Msg("failed to get redirect")
+		a.logger.Error().Err(err).Msg("failed to get token")
 		return ctx.SendStatus(fiber.StatusInternalServerError)
 	}
-	return ctx.Redirect(redirect, fiber.StatusTemporaryRedirect)
+
+	err = a.options.Manager.Mailer().SendMagicLink(ctx.Context(), mailer.Email{
+		To: email,
+	}, token, magic.Expiry)
+	if err != nil {
+		a.logger.Error().Err(err).Msg("failed to send magic link")
+		return ctx.SendStatus(fiber.StatusInternalServerError)
+	}
+
+	return ctx.SendStatus(fiber.StatusOK)
 }
 
 // callback godoc
-// @Summary      callback logs in a user with Google
-// @Description  callback logs in a user with Google
-// @Tags         google, callback
+// @Summary      callback logs in a user with a Magic Link
+// @Description  callback logs in a user with a Magic Link
+// @Tags         magic, callback
 // @Accept       json
 // @Produce      json
-// @Param        code         query string false "Next Redirect URL"
-// @Param        state        query string false "Device Flow Code"
+// @Param        token        query string true "magic link token"
 // @Success      307
 // @Header       307 {string} Location "Redirects to Next URL"
 // @Failure      400 {string} string
@@ -106,30 +134,29 @@ func (a *Google) login(ctx *fiber.Ctx) error {
 // @Failure      403 {string} string
 // @Failure      404 {string} string
 // @Failure      500 {string} string
-// @Router       /flows/google/callback [get]
-func (a *Google) callback(ctx *fiber.Ctx) error {
+// @Router       /flows/magic/callback [get]
+func (a *Magic) callback(ctx *fiber.Ctx) error {
 	a.logger.Debug().Str("IP", ctx.IP()).Msg("callback")
-	if a.options.Manager.Google() == nil {
-		return ctx.Status(fiber.StatusUnauthorized).SendString("google provider is not enabled")
+	if a.options.Manager.Magic() == nil {
+		return ctx.Status(fiber.StatusUnauthorized).SendString("magic provider is not enabled")
 	}
 
-	code := ctx.Query("code")
-	if code == "" {
-		return ctx.Status(fiber.StatusBadRequest).SendString("code is required")
+	token := ctx.Query("token")
+	if token == "" {
+		return ctx.Status(fiber.StatusBadRequest).SendString("token is required")
 	}
 
-	identifier := ctx.Query("state")
-	if identifier == "" {
-		return ctx.Status(fiber.StatusBadRequest).SendString("state is required")
-	}
-
-	f, err := a.options.Manager.Google().CompleteFlow(ctx.Context(), identifier, code)
+	f, err := a.options.Manager.Magic().CompleteFlow(ctx.Context(), token)
 	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
+		switch {
+		case errors.Is(err, sql.ErrNoRows):
 			return ctx.Status(fiber.StatusNotFound).SendString("flow does not exist")
+		case errors.Is(err, magic.ErrInvalidToken):
+			return ctx.Status(fiber.StatusUnauthorized).SendString("invalid token")
+		default:
+			a.logger.Error().Err(err).Msg("failed to complete flow")
+			return ctx.SendStatus(fiber.StatusInternalServerError)
 		}
-		a.logger.Error().Err(err).Msg("failed to complete flow")
-		return ctx.SendStatus(fiber.StatusInternalServerError)
 	}
 
 	if f.DeviceIdentifier != "" {
